<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>4.0.6</version>
        <relativePath/>
    </parent>

    <groupId>org.example</groupId>
    <artifactId>mc-ai</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>mc-ai</name>
    <description>mc-ai multi-module project</description>

    <modules>
        <module>ai-common</module>
        <module>ai-rag</module>
        <module>ai-agent</module>
    </modules>

    <properties>
        <java.version>17</java.version>
        <spring.profiles.active>dev</spring.profiles.active>
        <spring-cloud.version>2025.1.1</spring-cloud.version>
        <spring-ai.version>2.0.0</spring-ai.version>
        <postgresql.version>42.7.10</postgresql.version>
        <mybatis.version>3.5.15</mybatis.version>
        <commons-net.version>3.11.1</commons-net.version>
        <flyway.version>12.3.0</flyway.version>
        <mybatis-jsqlparser.version>3.5.16</mybatis-jsqlparser.version>
        <hutool.version>5.8.44</hutool.version>
        <swagger-parser.version>2.1.40</swagger-parser.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>${spring-cloud.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.springframework.ai</groupId>
                <artifactId>spring-ai-bom</artifactId>
                <version>${spring-ai.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.example</groupId>
                <artifactId>ai-common</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.example</groupId>
                <artifactId>ai-rag</artifactId>
                <version>${project.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <configuration>
                        <release>${java.version}</release>
                        <parameters>true</parameters>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>
